# Task-Man

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  run.py  style.css
app/: __init__.py  config.py  models.py  routes.py  utils.py
migrations/versions/: f0b5a010fdfb_initial_migration.py
tests/: conftest.py  test_routes.py
