[tool.poetry]
name = "task-man"
version = "0.1.0"
description = ""
authors = ["abhiverse01 <www.abhishekshah007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.2"
blinker = "1.8.2"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
exceptiongroup = "1.2.2"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
flask = "3.0.3"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
gunicorn = "22.0.0"
idna = "3.7"
importlib-metadata = "8.0.0"
iniconfig = "2.0.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
keyring = "24.3.1"
mako = "1.3.5"
markupsafe = "2.1.5"
more-itertools = "10.3.0"
msgpack = "1.0.8"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pyproject-hooks = "1.1.0"
pytest = "8.3.1"
python-dotenv = "1.0.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.9.4"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sqlalchemy = "2.0.31"
tomli = "2.0.1"
tomlkit = "0.13.0"
trove-classifiers = "2024.7.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
werkzeug = "3.0.3"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
